--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
+                <module>servioticy-configmanager</module>
 		<module>servioticy-rest-client</module>
 		<module>servioticy-queue-client</module>
 <!--		<module>servioticy-dispatcher</module> -->
