--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   <packaging>pom</packaging>
   <modules>
                 <module>servioticy-configmanager</module>
+                <module>servioticy-internalpublisher</module>
 		<module>servioticy-rest-client</module>
 		<module>servioticy-queue-client</module>
 <!--		<module>servioticy-dispatcher</module> -->
