--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "servioticy-queue-client"]
 	path = servioticy-queue-client
 	url = https://github.com/muka/servioticy-queue-client.git
+[submodule "servioticy-configmanager"]
+	path = servioticy-configmanager
+	url = https://github.com/muka/servioticy-configmanager.git
+[submodule "servioticy-internalpublisher"]
+	path = servioticy-internalpublisher
+	url = https://github.com/muka/servioticy-internalpublisher.git
